# VTGTUI

./: CLAUDE.md  README.md  pyproject.toml
src/vtgtui/: __init__.py  __main__.py  app.py  app.tcss  browse.py  converter.py  kitty_graphics.py  scrubber.py  thumbnails.py
src/vtgtui/data/: vtgtui.desktop
