[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vtgtui"
version = "1.0.0"
description = "A TUI application to convert video files to GIFs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "textual>=8.0.0",
    "imageio-ffmpeg>=0.5.1",
]

[project.scripts]
vtgtui = "vtgtui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vtgtui"]
